# oxide

./: .gitignore  Cargo.toml  README.md  flash.sh
.cargo/: config.toml
.github/instructions/: general.instructions.md  kernel.instructions.md  loader.instructions.md
abi/: Cargo.toml
abi/src/: lib.rs
docs/adr/: 0000-architecture-decisions.md  0001-epoch-versioning.md  0002-uefi-only.md  0003-x86_64-only.md  0004-loader-kernel-split.md  0005-loader-kernel-boundary-abi.md
docs/architecture/: 00-overview.md  01-boundaries.md  02-epochs.md  03-boot-flow.md
docs/modules/: console.md  framebuffer.md  memory.md  time.md
docs/notes/: kernel-design.md
docs/vision/: non-goals.md  principles.md  purpose.md
kernel/: Cargo.toml
kernel/src/: boot.rs  lib.rs  options.rs
kernel/src/console/: mod.rs
kernel/src/errors/: mod.rs
kernel/src/framebuffer/: boot.rs  draw.rs  font.rs  mod.rs  text.rs
kernel/src/interrupts/: mod.rs
kernel/src/memory/: allocator.rs  early.rs  error.rs  frame.rs  init.rs  map.rs  mod.rs  paging.rs
kernel/src/time/: mod.rs
loader/: Cargo.toml
loader/src/: abi.rs  firmware.rs  flags.rs  framebuffer.rs  logger.rs  main.rs  options.rs  time.rs  writer.rs
scripts/: build.sh  flash.sh
src/: main.rs
