[package]
name = "loader"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug-default"]
debug-default = []

[dependencies]
uefi = { version = "0.36.1", features = ["logger", "panic_handler"] }
arrayvec = { version = "0.7", default-features = false }
oxide-abi = { path = "../abi" }
oxide-kernel = { path = "../kernel", default-features = false }